          was actually more commands than there are really.

        - Added some error messages and new languages message to be used for 
          CTRL-c handler.

        - Fixed many typos.

        - Fixed plenty of tiny bugs.

THURSDAY 13TH, APRIL

        - Added new system that loads the entire script file at once, instead 
          of the weird old mechanics that consisted in opening/reading/closing 
          script at every new line. This achieve a great performance gain.

        - Fixed an error of the Dos9_SetFdInheritance under unices.

        - Fixed the goto command to make it able to deal with label that have 
          spaces inside them.

        - Fixed a bug that prevented i10n to be enabled with simple help 
          modules.

        - Fixed some manual pages.

FRIDAY 14TH, APRIL

        - Fixed some intrepretation error with the SET /p command.

        - Fixed conditionnal definition of _X_OPEN_SOURCE.

        - Fixed an enormous memory flaw that took place in the inteval 
          libraries and caused Dos9 memory consumption to increase 
          dramatically when using SET /a intensively

        - Fixed typos with i18n.

        - Removed unnecessary config.h.in from repository.

        - Fixed GOTO command ignoring bAbortCommad.

        - Fixed command SHIFT that picked arguments in the wrong local var 
          blocks.

        - Fixed Dos9_Auto.bat man page that was in ANSI instead of utf-8.

TUESDAY 18TH, APRIL

        - Added new file searching functions to speed up file search under 
          windows.

        - Fixed buffering modes of TYPE and DIR command to speed up functions.

        - Fixed issues of both libinteval and libmatheval in determining 
          delimiters.

THURSDAY 20TH, APRIL

        - Fixed errors in unicodes files search functions.

        - Fixed FIND command for enhanced compatibility with cmd.exe.

        - Fixed manual pages.

        - Fixed some typos.
