@@ -1699,4 +1699,6 @@ ${for %%a in (*.exe) do echo %%a}
 
 	- Fixed errors in unicode file searching function and functions.
 	
-	- Fixed find to make it faster using file buffering potential
+	- Fixed find to make it faster using file buffering potential.
+	
+	- Fixed the set command.
