@@ -1861,3 +1861,9 @@ THURSDAY 20TH, APRIL
 
         - Fixed some typos.
 
+MONDAY 24TH, APRIL
+
+        - Fixed errors in unicode file searching function and functions.
+
+        - Fixed find to make it faster using file buffering potential
+
